# rusty-bridge

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
crates/libs/lib-cloud-adapter/: Cargo.toml
crates/libs/lib-cloud-adapter-core/: Cargo.toml
crates/libs/lib-cloud-adapter-core/src/: lib.rs  pin.rs
crates/libs/lib-cloud-adapter-dev/: Cargo.toml
crates/libs/lib-cloud-adapter-dev/src/: lib.rs
crates/libs/lib-cloud-adapter-special-hivemq/: Cargo.toml  get_token.sh
crates/libs/lib-cloud-adapter-special-hivemq/examples/: publish.rs
crates/libs/lib-cloud-adapter-special-hivemq/src/: error.rs  event_loop.rs  lib.rs  tokens.rs
crates/libs/lib-cloud-adapter-special-iothub/: Cargo.toml
crates/libs/lib-cloud-adapter-special-iothub/src/: lib.rs
crates/libs/lib-cloud-adapter/src/: lib.rs
crates/libs/lib-data-source/: Cargo.toml
crates/libs/lib-data-source-core/: Cargo.toml
crates/libs/lib-data-source-core/src/: error.rs  lib.rs
crates/libs/lib-data-source-dev/: Cargo.toml
crates/libs/lib-data-source-dev/src/: lib.rs
crates/libs/lib-data-source-http-rest/: Cargo.toml
crates/libs/lib-data-source-http-rest/src/: hardcoded_special_transform.rs  lib.rs
crates/libs/lib-data-source-mqtt/: Cargo.toml  rumqttd.toml
crates/libs/lib-data-source-mqtt/examples/: testing.rs
crates/libs/lib-data-source-mqtt/src/: hardcoded_special_transform.rs  lib.rs
crates/libs/lib-data-source-special/: Cargo.toml
crates/libs/lib-data-source-special/src/: lib.rs
crates/libs/lib-data-source/src/: lib.rs
crates/libs/lib-edge-reporter/: Cargo.toml
crates/libs/lib-edge-reporter/src/: dynamic_metrics.rs  lib.rs  static_metrics.rs
crates/libs/lib-mini-config/: Cargo.toml
crates/libs/lib-mini-config-core/: Cargo.toml
crates/libs/lib-mini-config-core/src/: error.rs  lib.rs
crates/libs/lib-mini-config-dev/: Cargo.toml  config.toml
crates/libs/lib-mini-config-dev/src/: lib.rs
crates/libs/lib-mini-config-special/: Cargo.toml
crates/libs/lib-mini-config-special/src/: data_source.rs  edge_reporter.rs  lib.rs  metrics_server.rs  north_adapters.rs  persistence.rs
crates/libs/lib-mini-config/src/: lib.rs
crates/libs/lib-msg-persistence/: Cargo.toml
crates/libs/lib-msg-persistence-dev/: Cargo.toml
crates/libs/lib-msg-persistence-sled/: Cargo.toml
crates/libs/lib-msg-persistence-sled/src/: lib.rs
crates/libs/lib-msg-persistence/src/: lib.rs
crates/libs/lib-msg-transform-core/: Cargo.toml
crates/libs/lib-msg-transform-core/src/: lib.rs
crates/libs/lib-msg-transform-dev/: Cargo.toml
crates/libs/lib-msg-transform-dev/src/: lib.rs
crates/libs/lib-msg-transform-special-hivemq/: Cargo.toml
crates/libs/lib-msg-transform-special-hivemq/src/: lib.rs  sequence.rs
crates/libs/lib-msg-transforms/: Cargo.toml
crates/libs/lib-msg-transforms/src/: lib.rs
crates/libs/lib-special-ana/: Cargo.toml
crates/libs/lib-special-ana/examples/: get_token.rs  token_auto_renew.rs
crates/libs/lib-special-ana/src/: error.rs  lib.rs  okta_token.rs  token_updated.rs
crates/libs/lib-special-ana/tests/: integration_test.rs
crates/rusty-bridge/: Cargo.toml  README.md
crates/rusty-bridge/src/: error.rs  lib.rs  main.rs  title.rs
crates/rusty-bridge/src/data_server/: mod.rs
crates/rusty-bridge/src/data_server/noop/: noop.rs
crates/rusty-bridge/src/data_server/server/: data_events.rs  data_service.rs  handle.rs  mod.rs  server.rs
crates/rusty-bridge/src/data_server/server/request_handlers/: mod.rs
crates/rusty-bridge/src/initialize/: mod.rs  signals.rs
crates/rusty-bridge/src/main_loop/: mod.rs
crates/rusty-bridge/src/persistence/: mod.rs
crates/rusty-bridge/src/shutdown/: mod.rs  termination.rs
crates/rusty-bridge/src/startup/: mod.rs
tools/: build-dev.sh  build-http.sh  build-mqtt.sh  build-special.sh
tools/edge_report_listener/: Cargo.toml  README.md
tools/edge_report_listener/src/: main.rs
tools/metrics-viewer/: Cargo.toml  README.md  index.html
tools/metrics-viewer/assets/: sw.js
tools/metrics-viewer/src/: activity_strings.rs  app.rs  connection_plot.rs  error.rs  latency_plot.rs  lib.rs  main.rs
tools/metrics-viewer/src/data_collection/: conn_events.rs  mod.rs  msg_events.rs
tools/metrics-viewer/src/egui_plot/: legend.rs  memory.rs  mod.rs  plot_ui.rs  transform.rs
tools/metrics-viewer/src/egui_plot/items/: bar.rs  box_elem.rs  mod.rs  rect_elem.rs  values.rs
tools/metrics-viewer/src/latency_plot/: bar.rs  bar_chart.rs
