[package]
name = "rusty-bridge"
version = "0.1.0"
edition = "2021"
authors = ["Christopher Davidoff <xxx>"]
readme = "README.md"

[dependencies]
# TODO - default options to false for all libraries
#special-ana = { path = "../libs/lib-special-ana" }
cloud-adapter-core = { path = "../libs/lib-cloud-adapter-core" }
cloud-adapter = { path = "../libs/lib-cloud-adapter" }
data-source = { path = "../libs/lib-data-source" }
data-source-core = { path = "../libs/lib-data-source-core" }
mini-config = { path = "../libs/lib-mini-config" }
mini-config-core = { path = "../libs/lib-mini-config-core" }
msg-persistence = { path = "../libs/lib-msg-persistence" }
msg-transform-core = { path = "../libs/lib-msg-transform-core" }
msg-transforms = { path = "../libs/lib-msg-transforms" }
edge-reporter = { path = "../libs/lib-edge-reporter" }
anyhow = { version = "1.0.80" }
tracing-subscriber = "0.3.18"
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full", "tracing"] }
tokio-util = { workspace = true }
#enum_dispatch = { workspace = true } // maybe if I want to keep noop for enable/disable data-server, when it is still compiled in
# Optional dependencies
hyper = { version = "1.2.0", features = ["full"], optional = true }
http-body-util = { version = "0.1.1", optional = true }
hyper-util = { version = "0.1.3", features = ["full"], optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }


# Features
# * data-server will include the metrics data server code
[features]
default = ["data-server"]
none = [] # Helps as a dummy in-case no features are desired
data-server = [
    "dep:hyper",
    "dep:http-body-util",
    "dep:hyper-util",
    "dep:serde",
    "dep:serde_json",
]
