[package]
name = "cloud-adapter-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum_dispatch = { version = "0.3.12" }
tokio = { workspace = true, features = ["full", "tracing"] }
tokio-util = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
data-source = { path = "../../libs/lib-data-source" }
data-source-core = { path = "../../libs/lib-data-source-core" }
pin-project = "1.1.5"
