[package]
name = "connector-dev"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["full", "tracing"] }
tokio-util = { workspace = true }
cloud-adapter-core = { path = "../../libs/lib-cloud-adapter-core" }
data-source-core = { path = "../../libs/lib-data-source-core" }
tracing = { workspace = true }
async-trait = { workspace = true }
