[package]
name = "data-source-http-rest"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
axum = { version = "0.7.5", features = ["macros"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.2", features = ["full"] }
data-source-core = { path = "../../libs/lib-data-source-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[lints]
workspace = true
