[package]
name = "data-source-mqtt"
version = "0.1.0"
edition = "2021"

[dependencies]
rumqttd = "0.19.0"
config = "0.14.0"
data-source-core = { path = "../../libs/lib-data-source-core" }
tracing.workspace = true
tokio.workspace = true
async-trait = { workspace = true }
serde.workspace = true #only need because hardcoding special transform for demo
serde_json.workspace = true # only needed because hardocding special transform for demo
uuid = { version = "1.8.0", features = [
    "v4",
    "fast-rng",
] } # only needed because hardcoding special transform for demo

[lints]
workspace = true

[dev-dependencies]
tracing-subscriber = "0.3.18"
rumqttc = "0.24.0"

[[example]]
name = "testing"
path = "examples/testing.rs"

#[[example]]
#name = "token_auto_renew"
#path = "examples/token_auto_renew.rs"
