[package]
name = "edge-reporter"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.4", features = ["json"] }
sysinfo = "0.30.11"
machineid-rs = "1.2.4"
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true

[lints]
workspace = true
