[package]
name = "special-hivemq-transform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Transform
sparkplug-rs = "0.4.0"
flate2 = "1.0.28"
# Workspace
tracing = { workspace = true }

[features]
